--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "### Hello World and such",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gustav Larsson <gl2222pp@student.lnu.se>",
